--- a/src/Components/Header/Pages/Navigation.css
+++ b/src/Components/Header/Pages/Navigation.css
@@ -1,11 +1,17 @@
 .Navigation {
   background: #005873;
-  height: 79px;
+  height: 70px;
 }
 .main {
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  max-width: 900px;
+  width: 900px;
   padding-top: 25px;
+}
+
+@media (max-width: 600px) {
+  .main {
+    width: 100%;
+  }
 }
