--- a/src/Components/Header/Components/Search.css
+++ b/src/Components/Header/Components/Search.css
@@ -4,15 +4,16 @@
   align-items: center;
   justify-content: space-between;
   gap: 8px;
-  background: #2f3640;
+  background: #12305a;
   border-radius: 50px;
   position: relative;
+  height: 40px;
 }
 
 .searchButton {
   color: white;
   position: absolute;
-  right: 8px;
+  right: 4px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
