--- a/src/Components/Products/Components/Product.css
+++ b/src/Components/Products/Components/Product.css
@@ -1,93 +1,139 @@
 .card {
-  --font-color: #fefefe;
-  --font-color-sub: #7e7e7e;
-  --bg-color: #111;
-  --main-color: #fefefe;
-  --main-focus: #2d8cf0;
-  width: 230px;
-  height: 300px;
-  background: var(--bg-color);
-  border: 2px solid var(--main-color);
-  box-shadow: 4px 4px var(--main-color);
-  border-radius: 5px;
+  --bg-card: #27272a;
+  --primary: #6d28d9;
+  --primary-800: #4c1d95;
+  --primary-shadow: #2e1065;
+  --light: #d9d9d9;
+  --zinc-800: #18181b;
+  --bg-linear: linear-gradient(0deg, var(--primary) 50%, var(--light) 125%);
+
+  position: relative;
+
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  padding: 20px;
-  gap: 10px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  gap: 0.75rem;
+
+  padding: 1rem;
+  width: 14rem;
+  background-color: var(--bg-card);
+
+  border-radius: 1rem;
 }
 
-.card:last-child {
-  justify-content: flex-end;
-}
+.image_container {
+  overflow: hidden;
+  cursor: pointer;
 
-.card-title {
-  font-size: 20px;
-  font-weight: 500;
-  text-align: center;
-  color: var(--font-color);
-}
+  position: relative;
+  z-index: 5;
 
-.card-subtitle {
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--font-color-sub);
-}
-
-.card-divider {
   width: 100%;
-  border: 1px solid var(--main-color);
-  border-radius: 50px;
+  height: 8rem;
+  background-color: var(--primary-800);
+
+  border-radius: 0.5rem;
 }
 
-.card-footer {
+.image_container .image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 3rem;
+  fill: var(--light);
+}
+
+.title {
+  overflow: clip;
+
+  width: 100%;
+
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--light);
+  text-transform: capitalize;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+}
+
+.size {
+  font-size: 0.75rem;
+  color: var(--light);
+}
+
+.list-size {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  gap: 0.25rem;
+
+  margin-top: 0.25rem;
 }
 
-.card-price {
-  font-size: 20px;
-  font-weight: 500;
-  color: var(--font-color);
+.list-size .item-list {
+  list-style: none;
 }
 
-.card-price span {
-  font-size: 20px;
-  font-weight: 500;
-  color: var(--font-color-sub);
+.list-size .item-list-button {
+  cursor: pointer;
+
+  padding: 0.5rem;
+  background-color: var(--zinc-800);
+
+  font-size: 0.75rem;
+  color: var(--light);
+
+  border: 2px solid var(--zinc-800);
+  border-radius: 0.25rem;
+
+  transition: all 0.3s ease-in-out;
 }
 
-.card-btn {
-  height: 35px;
-  background: var(--bg-color);
-  border: 2px solid var(--main-color);
-  border-radius: 5px;
-  padding: 0 15px;
-  transition: all 0.3s;
+.item-list-button:hover {
+  border: 2px solid var(--light);
+}
+.item-list-button:focus {
+  background-color: var(--primary);
+
+  border: 2px solid var(--primary-shadow);
+
+  box-shadow: inset 0px 1px 4px var(--primary-shadow);
 }
 
-.card-btn svg {
+.action {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.price {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--light);
+}
+
+.cart-button {
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+
+  padding: 0.5rem;
   width: 100%;
-  height: 100%;
-  fill: var(--main-color);
-  transition: all 0.3s;
+  background-image: var(--bg-linear);
+
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: var(--light);
+  text-wrap: nowrap;
+
+  border: 2px solid hsla(262, 83%, 58%, 0.5);
+  border-radius: 0.5rem;
+  box-shadow: inset 0 0 0.25rem 1px var(--light);
 }
 
-.card-img:hover {
-  transform: translateY(-3px);
-}
-
-.card-btn:hover {
-  border: 2px solid var(--main-focus);
-}
-
-.card-btn:hover svg {
-  fill: var(--main-focus);
-}
-
-.card-btn:active {
-  transform: translateY(3px);
+.cart-button .cart-icon {
+  width: 1rem;
 }
