--- a/src/Components/Products/Components/Product.css
+++ b/src/Components/Products/Components/Product.css
@@ -1,139 +1,69 @@
 .card {
-  --bg-card: #27272a;
-  --primary: #6d28d9;
-  --primary-800: #4c1d95;
-  --primary-shadow: #2e1065;
-  --light: #d9d9d9;
-  --zinc-800: #18181b;
-  --bg-linear: linear-gradient(0deg, var(--primary) 50%, var(--light) 125%);
-
+  width: 190px;
+  height: 254px;
+  padding: 0.8em;
+  background: #f5f5f5;
   position: relative;
-
-  display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
-
-  padding: 1rem;
-  width: 14rem;
-  background-color: var(--bg-card);
-
-  border-radius: 1rem;
+  overflow: visible;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.image_container {
-  overflow: hidden;
-  cursor: pointer;
-
-  position: relative;
-  z-index: 5;
-
+.card-img {
+  background-color: #ffcaa6;
+  height: 40%;
   width: 100%;
-  height: 8rem;
-  background-color: var(--primary-800);
-
   border-radius: 0.5rem;
+  transition: 0.3s ease;
 }
 
-.image_container .image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  width: 3rem;
-  fill: var(--light);
+.card-info {
+  padding-top: 10%;
 }
 
-.title {
-  overflow: clip;
+svg {
+  width: 20px;
+  height: 20px;
+}
 
+.card-footer {
   width: 100%;
-
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--light);
-  text-transform: capitalize;
-  text-wrap: nowrap;
-  text-overflow: ellipsis;
-}
-
-.size {
-  font-size: 0.75rem;
-  color: var(--light);
-}
-
-.list-size {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 0.25rem;
-
-  margin-top: 0.25rem;
+  padding-top: 10px;
+  border-top: 1px solid #ddd;
 }
 
-.list-size .item-list {
-  list-style: none;
+/*Text*/
+.text-title {
+  font-weight: 900;
+  font-size: 1.2em;
+  line-height: 1.5;
 }
 
-.list-size .item-list-button {
+.text-body {
+  font-size: 0.9em;
+  padding-bottom: 10px;
+}
+
+/*Button*/
+.card-button {
+  border: 1px solid #252525;
+  display: flex;
+  padding: 0.3em;
   cursor: pointer;
-
-  padding: 0.5rem;
-  background-color: var(--zinc-800);
-
-  font-size: 0.75rem;
-  color: var(--light);
-
-  border: 2px solid var(--zinc-800);
-  border-radius: 0.25rem;
-
-  transition: all 0.3s ease-in-out;
+  border-radius: 50px;
+  transition: 0.3s ease-in-out;
 }
 
-.item-list-button:hover {
-  border: 2px solid var(--light);
-}
-.item-list-button:focus {
-  background-color: var(--primary);
-
-  border: 2px solid var(--primary-shadow);
-
-  box-shadow: inset 0px 1px 4px var(--primary-shadow);
+/*Hover*/
+.card-img:hover {
+  transform: translateY(-25%);
+  box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px,
+    rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
 }
 
-.action {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.price {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: var(--light);
-}
-
-.cart-button {
-  cursor: pointer;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.25rem;
-
-  padding: 0.5rem;
-  width: 100%;
-  background-image: var(--bg-linear);
-
-  font-size: 0.75rem;
-  font-weight: 500;
-  color: var(--light);
-  text-wrap: nowrap;
-
-  border: 2px solid hsla(262, 83%, 58%, 0.5);
-  border-radius: 0.5rem;
-  box-shadow: inset 0 0 0.25rem 1px var(--light);
-}
-
-.cart-button .cart-icon {
-  width: 1rem;
+.card-button:hover {
+  border: 1px solid #ffcaa6;
+  background-color: #ffcaa6;
 }
