--- a/src/Components/Header/Components/Search.css
+++ b/src/Components/Header/Components/Search.css
@@ -7,15 +7,16 @@
   background: #12305a;
   border-radius: 50px;
   position: relative;
-  height: 40px;
+  height: 30px;
+  margin-top: 5px;
 }
 
 .searchButton {
   color: white;
   position: absolute;
   right: 4px;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background: var(
     --gradient-2,
@@ -25,14 +26,13 @@
   display: inline-block;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
-/*hover effect*/
+
 button:hover {
   color: #fff;
   background-color: #1a1a1a;
   box-shadow: rgba(0, 0, 0, 0.5) 0 10px 20px;
   transform: translateY(-3px);
 }
-/*button pressing effect*/
 button:active {
   box-shadow: none;
   transform: translateY(0);
