--- a/src/Components/Products/Components/Product.css
+++ b/src/Components/Products/Components/Product.css
@@ -1,6 +1,6 @@
-.card {
-  width: 190px;
-  height: 254px;
+.cardx {
+  width: 320px;
+  height: 300px;
   padding: 0.8em;
   background: #f5f5f5;
   position: relative;
@@ -9,8 +9,9 @@
 }
 
 .card-img {
+   object-fit: contain;
   background-color: #ffcaa6;
-  height: 40%;
+  height: 55%;
   width: 100%;
   border-radius: 0.5rem;
   transition: 0.3s ease;
