--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -25,11 +25,6 @@
   color: #63656b;
 }
 
-/* cart */
-.cart {
-  border-radius: 19px 19px 7px 7px;
-}
-
 .cart .products {
   display: flex;
   flex-direction: column;
@@ -177,4 +172,7 @@
   font-size: 13px;
   font-weight: 600;
   transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+.remove{
+  cursor: pointer;
 }
