--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,11 +2,11 @@
   background-color: rgb(17, 71, 133);
   display: flex;
   align-items: center;
-  justify-content:start;
+  justify-content: start;
   padding: 5px 5px;
   gap: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
