--- a/src/Components/Products/Components/Product.css
+++ b/src/Components/Products/Components/Product.css
@@ -8,6 +8,10 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+.product{
+  margin-bottom: 20px;
+}
+
 .card-img {
    object-fit: contain;
   background-color: #ffcaa6;
