--- a/src/Components/Products/Components/Product.css
+++ b/src/Components/Products/Components/Product.css
@@ -1,3 +1,7 @@
+.box{
+  padding-bottom: 100px
+}
+
 .cardx {
   width: 320px;
   height: 300px;
@@ -72,3 +76,7 @@ svg {
   border: 1px solid #ffcaa6;
   background-color: #ffcaa6;
 }
+
+/* .added{
+ pointer-events: none;
+} */
