--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -1,5 +1,5 @@
 .form {
- padding-top:50%;
+  padding-top: 50%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -10,7 +10,6 @@
   transition: background 0.3s ease;
   margin: 70px auto;
 }
-
 
 ::placeholder {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -110,4 +109,14 @@
   color: rgb(167, 192, 239);
   font-size: 14px;
   margin: 5px 0;
+}
+
+@media (max-width: 600px) {
+  .form {
+    gap: 5px;
+    background: rgb(12, 39, 98);
+    padding: 20px;
+    width: 310px;
+    margin: 30px auto;
+  }
 }
