--- a/src/Components/Products/Components/Product.css
+++ b/src/Components/Products/Components/Product.css
@@ -1,32 +1,28 @@
-.box{
-  padding-bottom: 100px
+.box {
+  padding-bottom: 100px;
 }
 
 .cardx {
-  width: 320px;
-  height: 300px;
+  width: 300px;
   padding: 0.8em;
   background: #f5f5f5;
   position: relative;
   overflow: visible;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
-.product{
-  margin-bottom: 20px;
+  box-shadow: 0 4px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .card-img {
-   object-fit: contain;
-  background-color: #ffcaa6;
-  height: 55%;
+  object-fit: contain;
   width: 100%;
-  border-radius: 0.5rem;
   transition: 0.3s ease;
+}
+.image {
+  height: 200px;
+  object-fit: contain;
 }
 
 .card-info {
-  padding-top: 10%;
+  padding-top: 5%;
 }
 
 svg {
@@ -45,6 +41,14 @@ svg {
 
 /*Text*/
 .text-title {
+  font-weight: 900;
+  font-size: 1.2em;
+  line-height: 1.5;
+  color: rgb(61, 138, 61);
+}
+
+.amount {
+  color: rgb(239, 22, 14);
   font-weight: 900;
   font-size: 1.2em;
   line-height: 1.5;
