--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -44,6 +44,14 @@
   height: 100%;
 }
 
+.textarea {
+  margin-left: 10px;
+  border-radius: 1rem;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
 .input:focus {
   outline: none;
 }
@@ -109,6 +117,12 @@
   color: rgb(167, 192, 239);
   font-size: 14px;
   margin: 5px 0;
+}
+
+.product-img{
+  height: 200px;
+  width: 50%;
+
 }
 
 @media (max-width: 600px) {
