--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,15 +6,16 @@
   padding: 5px 5px;
   gap: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
-  position: fixed;
+  position:relative;
   bottom: 0;
   width: 100%;
+  height: 100px;
 }
 
 /* for all social containers*/
 .socialContainer {
-  width: 52px;
-  height: 52px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background-color: rgb(39, 85, 165);
   display: flex;
@@ -66,4 +67,11 @@
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+@media (max-width:600px) {
+  .footer{
+    height: 50px;
+  }
+  
 }
