--- a/src/Components/Header/Components/Deals.css
+++ b/src/Components/Header/Components/Deals.css
@@ -1,11 +1,19 @@
 .deals {
   font-size: 20px;
-  font-family: "Reddit Sans", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .deals-li:hover{
     color: rgb(35, 35, 170);
     cursor: pointer;
+}
+
+/* .active,.deals-li:hover{
+    color: rgb(23, 23, 172);
+} */
+.deals-li:focus{
+  color: rgb(23, 23, 172);
+  background-color: red;
 }
 
 @media (max-width: 600px) {
