--- a/src/Components/Header/Pages/Navigation.css
+++ b/src/Components/Header/Pages/Navigation.css
@@ -1,6 +1,6 @@
 .Navbar{
-    height: 70px;
+    height: 60px;
     padding: 10px;
-    justify-content: space-around;
+    justify-content: space-between;
 
 }
