--- a/src/Components/Toggler/Toggler.css
+++ b/src/Components/Toggler/Toggler.css
@@ -1,52 +1,49 @@
 #checkbox {
-  display: none;
+  visibility: hidden;
 }
 
-.toggle {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  transition-duration: .3s;
-}
+@media (max-width: 600px) {
+  #checkbox {
+    display: none;
+  }
 
-.bars {
-  width: 100%;
-  height: 4px;
-  background-color: rgb(0, 0, 0);
-  border-radius: 5px;
-  transition-duration: .3s;
-}
+  .toggle {
+    position: relative;
+    width: 30px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    transition-duration: 0.3s;
+  }
 
-/* #checkbox:checked + .toggle .bars {
-  margin-left: 13px;
-} */
+  .bars {
+    width: 100%;
+    height: 4px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 5px;
+    transition-duration: 0.3s;
+  }
 
-#checkbox:checked + .toggle #bar2 {
-  transform: translateY(14px) rotate(60deg);
-  margin-left: 0;
-  transform-origin: right;
-  transition-duration: .3s;
-  z-index: 2;
-}
+  #checkbox:checked + .toggle #bar2 {
+    transform: translateY(14px) rotate(60deg);
+    margin-left: 0;
+    transform-origin: right;
+    transition-duration: 0.3s;
+    z-index: 2;
+  }
 
-#checkbox:checked + .toggle #bar1 {
-  transform: translateY(28px) rotate(-60deg);
-  transition-duration: .3s;
-  transform-origin: left;
-  z-index: 1;
-}
+  #checkbox:checked + .toggle #bar1 {
+    transform: translateY(28px) rotate(-60deg);
+    transition-duration: 0.3s;
+    transform-origin: left;
+    z-index: 1;
+  }
 
-#checkbox:checked + .toggle {
-  transform: rotate(-90deg);
+  #checkbox:checked + .toggle {
+    transform: rotate(-90deg);
+  }
 }
-/* #checkbox:checked + .toggle #bar3 {
-  transform: rotate(90deg);
-  transition-duration: .3s;
-  transform-origin:right;
-} */
