--- a/src/Components/Header/Components/Search.css
+++ b/src/Components/Header/Components/Search.css
@@ -14,7 +14,7 @@
   outline: none;
   border-radius: 50%;
   transition: .5s ease-in-out;
-  background-color: #172fb3;
+  background-color: #394fba;
   box-shadow: 0px 0px 3px #f3f3f3;
   padding-right: 40px;
   color: #000000;
@@ -27,7 +27,7 @@
 }
 
 .input::placeholder {
-  color: #8f8f8f;
+  color: #ffeeee;
 }
 
 .icon {
@@ -59,7 +59,6 @@
 
 @media (max-width:600px) {
     .input-wrapper{
-        /* visibility: hidden; */
         display: none;
     }
     
