--- a/src/Components/Dropdown/Dropdown.css
+++ b/src/Components/Dropdown/Dropdown.css
@@ -1,18 +1,27 @@
-.dropdown{
-    display: flex;
-    flex-direction: column;
-    margin: 50px auto;
-    width: 200px;
-    background: red;
-    
+.dropdown {
+  display: flex;
+  flex-direction: column;
+  margin-top: 45px;
+  right: 5%;
+  width: 140px;
+  background: rgba(183, 177, 183, 0.933);
+  border-radius: 5px;
+  position: fixed;
+  box-shadow: darkslateblue;
 }
 
-.backdrop{
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: 10;
-  background: rgba(0, 0, 0, 0.75);
+  /* z-index: 10; */
+  /* background: rgba(0, 0, 0, 0.75); */
+}
+@media (max-width: 600px) {
+  .dropdown {
+    right: 20%;
+    width: 100px;
+  }
 }
