--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,7 +6,7 @@
   padding: 5px 5px;
   gap: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
-  position:fixed;
+  position:relative;
   bottom: 0;
   width: 100%;
   height: 70px;
