--- a/src/Components/Dropdown/Dropdown.css
+++ b/src/Components/Dropdown/Dropdown.css
@@ -1,24 +1,27 @@
-.dropdown {
-  display: flex;
-  flex-direction: column;
-  margin-top: 45px;
-  right: 5%;
-  width: 140px;
-  background: rgba(183, 177, 183, 0.933);
-  border-radius: 5px;
-  position: fixed;
-  box-shadow: darkslateblue;
-}
-
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  /* z-index: 10; */
-  /* background: rgba(0, 0, 0, 0.75); */
 }
+
+.dropdown {
+  z-index: 100;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin-top: 62px;
+  right: 0;
+  width: 250px;
+  border-radius: 5px;
+  position:absolute;
+  box-shadow: darkslateblue;
+  gap: 10px;
+  align-items: center;
+}
+
+
 @media (max-width: 600px) {
   .dropdown {
     right: 20%;
