--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,18 +1,11 @@
 .footer {
-  background-color: rgb(17, 71, 133);
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  padding: 5px 5px;
-  gap: 20px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
-  position:relative;
+  position: fixed;
   bottom: 0;
   width: 100%;
-  height: 70px;
+  display: flex;
   justify-content: space-between;
 }
-.footer-item{
+.footer-item {
   gap: 10px;
 }
 
@@ -61,11 +54,9 @@
   animation: slide-in-top 0.3s both;
 }
 
-.datetime{
-  display: flex;
-  color: white;
-  font-size: 15
-  px;
+.datetime {
+  color: rgb(10, 70, 138);
+  font-size: 14 px;
 }
 
 @keyframes slide-in-top {
@@ -80,9 +71,11 @@
   }
 }
 
-@media (max-width:600px) {
-  .footer{
+@media (max-width: 600px) {
+  .footer {
     height: 50px;
   }
-  
+  .datetime {
+  font-size: 10 px;
+}
 }
