--- a/src/Components/Header/Components/Deals.css
+++ b/src/Components/Header/Components/Deals.css
@@ -1,5 +1,6 @@
 .deals {
-  font-size: 20px;
+  font-size: 18px;
+  font-style: italic;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
