--- a/src/Components/Header/Components/Search.css
+++ b/src/Components/Header/Components/Search.css
@@ -12,7 +12,7 @@
   width: 50px;
   padding: 10px;
   outline: none;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   transition: .5s ease-in-out;
   background-color: #394fba;
   box-shadow: 0px 0px 3px #f3f3f3;
