--- a/src/Components/Products/Components/Product.css
+++ b/src/Components/Products/Components/Product.css
@@ -67,25 +67,23 @@ svg {
 }
 
 .card-img:hover {
-  transform: translateY(-25%);
+  /* transform: translateY(-25%); */
   box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px,
     rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
 }
 
 .card-button:hover {
-  border: 1px solid #ffcaa6;
-  background-color: #ffcaa6;
+  border: 1px solid #21bf76;
+  background-color: #21bf76;
 }
 
 .seemore {
   margin: 10px;
-  background: rgba(0, 0, 0, 0.24);
-  color: rgb(248, 248, 248);
 }
 
 @media (max-width: 600px) {
   .cardx {
-    width: 150px;
+    width: 200px;
   }
   .card-img {
     object-fit: contain;
